--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -5,15 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static "css/style.css" %}" rel="stylesheet">
     <title> Disaster Center </title>
   </head>
   <body>
-    <div id="navbar" class="navbar navbar-default navbar-fixed-top">
-      <h4><a href="{% url "floods" %}">Floods</a></h4>
-      <h4><a href="{% url "storms" %}">Storms</a></h4>
-      <h4><a href="{% url "updates" %}">Updates</a></h4>
-      <h4><a href="{% url "traffic" %}">Traffic</a></h4>
-      <h4><a href="{% url "dangerzones" %}">Danger Zones</a></h4>
+    <div id="navbar">
+      <div id="navbaritems">
+        <ul class="nav navbar-nav navbar-default navbar-fixed-top navigationformat">
+          <li role="presentation"><h4><a href="{% url "floods" %}">Floods</a></h4></li>
+          <li role="presentation"><h4><a href="{% url "storms" %}">Storms</a></h4></li>
+          <li role="presentation"><h4><a href="{% url "updates" %}">Updates</a></h4></li>
+          <li role="presentation"><h4><a href="{% url "traffic" %}">Traffic</a></h4></li>
+          <li role="presentation"><h4><a href="{% url "dangerzones" %}">Danger Zones</a></h4></li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="main">
+        <h1> Disaster Center <h1>
+        <p> We're here to help. </p>
     </div>
 
 
