--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -11,25 +11,42 @@
   <body>
 
     <!-- navbar -->
-    <div id="navbar" class="container-fluid">
-      <div class="navbar-header">
+    
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+        </div>
+        <div id="navbar" class="navbar">
+          <ul class="nav navbar-nav">
+            <li><a href="{% url 'floods' %}">Floods</a></li>
+            <li><a href="{% url 'storms' %}">Storms</a></li>
+            <li><a href="{% url 'updates' %}">Updates</a></li>
+            <li><a href="{% url 'traffic' %}">Traffic</a></li>
+            <li><a href="{% url 'dangerzones' %}">Danger Zones</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-      <div class="navbar">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'floods' %}">Floods</a></li>
-          <li><a href="{% url 'storms' %}">Storms</a></li>
-          <li><a href="{% url 'updates' %}">Updates</a></li>
-          <li><a href="{% url 'traffic' %}">Traffic</a></li>
-          <li><a href="{% url 'dangerzones' %}">Danger Zones</a></li>
-        </ul>
-      </div>
+    </nav>
+
+    <!--space-->
+    <div id="space" class="row">
+      <div class="col-md-12">
+      <div>
     </div>
 
     <!-- main text -->
     <div id="maintext" class="row">
-      <div class="col-md-6 col-md-3-offset">
+      <div class="col-md-12">
         <h1 style="font-size: 70px; font-weight: bold;"> Disaster Center </h1>
         <p style="font-size: 36px; font-weight: lighter; font-style: italic;"> We're here to help. </p>
+      <div>
+    </div>
+
+    <!-- button -->
+    <div class="row">
+      <div class="col-md-12">
+        <a id="enterSite" href="" class="btn btn-primary" style="padding: 20px;"> Log In / Register </a>
       <div>
     </div>
 
