--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -23,7 +23,7 @@
             <li><a href="{% url 'traffic' %}">Traffic</a></li>
             <li><a href="{% url 'dangerzones' %}">Danger Zones</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
 
