--- a/disastercenter/disaster_center/templates/floods.html
+++ b/disastercenter/disaster_center/templates/floods.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-    <link href="{% static "css/style.css" %}" rel="stylesheet">
+    <link href="{% static "css/main.css" %}" rel="stylesheet">
+    <link href="{% static "css/moduleBase.css" %}" rel="stylesheet">
     <title> Disaster Center - Floods</title>
   </head>
   <body>
@@ -27,10 +28,16 @@
       </div>
     </nav>
 
+    <!--space-->
+    <div id="space" class="row">
+      <div class="col-md-12">
+      <div>
+    </div>
+
     <div class="row">
       <div class="container">
-        <div class="col-md-12">
-          <h1> Floods </h1>
+        <div id="moduleHeader"class="col-md-12">
+          <h1>Floods</h1>
         </div>
       </div>
     </div>
