amazing additions (in the html files)

--- a/disastercenter/disaster_center/static/css/moduleBase.css
+++ b/disastercenter/disaster_center/static/css/moduleBase.css
@@ -1,7 +1,13 @@
 #space {
-  padding: 100px;
+  padding: 60px;
 }
 
 #moduleHeader {
   text-size: 72px;
+}
+
+.regContainer {
+  display: flex;
+
+
 }
