--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -30,7 +30,7 @@
     <!--space-->
     <div id="space" class="row">
       <div class="col-md-12">
-      <div>
+      </div>
     </div>
 
     <!-- main text -->
@@ -44,7 +44,7 @@
     <!-- button -->
     <div class="row">
       <div class="col-md-12">
-        <a id="enterSite" href="" class="btn btn-primary" style="padding: 20px;"> Log In / Register </a>
+        <a id="enterSite" href="{% url 'newuser' %}" class="btn btn-primary" style="padding: 20px;"> Log In / Register </a>
       <div>
     </div>
 
