--- a/disastercenter/disaster_center/templates/danger-zones.html
+++ b/disastercenter/disaster_center/templates/danger-zones.html
@@ -31,7 +31,7 @@
     <!--space-->
     <div id="space" class="row">
       <div class="col-md-12">
-      <div>
+      </div>
     </div>
 
     <div class="row">
