--- a/disastercenter/disaster_center/templates/controlcenter.html
+++ b/disastercenter/disaster_center/templates/controlcenter.html
@@ -7,7 +7,7 @@
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/main.css" %}" rel="stylesheet">
     <link href="{% static "css/moduleBase.css" %}" rel="stylesheet">
-    <title> Disaster Center - Add Event</title>
+    <title> Disaster Center - Control Center</title>
   </head>
   <body>
 
@@ -37,12 +37,11 @@
     <div class="row">
       <div class="container">
         <div id="moduleHeader"class="col-md-12">
-          <h1>Add Event</h1>
+          <h1>Control Center</h1>
         </div>
       </div>
     </div>
 
-    
 
   </body>
 
