--- a/disastercenter/disaster_center/templates/add-event.html
+++ b/disastercenter/disaster_center/templates/add-event.html
@@ -42,7 +42,35 @@
       </div>
     </div>
 
-    
+    <div class="row">
+      <div class="container">
+        <form class="form-horizontal">
+            <label class="control-label col-md-2"> Report Type: </label>
+            <div class="form-group col-md-10">
+              <input type="text" class="form-control" name="reportType">
+            </div>
+
+            <label class="control-label col-md-2"> Latitude: </label>
+            <div class="form-group col-md-10">
+              <input type="password" class="form-control" name="latitude">
+            </div>
+            <label class="control-label col-md-2"> Longitude: </label>
+            <div class="form-group col-md-10">
+              <input type="password" class="form-control" name="longitude">
+            </div>
+            <label class="control-label col-md-2"> Date: </label>
+            <div class="form-group col-md-10">
+              <input type="password" class="form-control" name="dateTimeStart">
+            </div>
+            <label class="control-label col-md-2"> Time: </label>
+            <div class="form-group col-md-10">
+              <input type="password" class="form-control" name="dateTimeEnd">
+            </div>
+
+            <input type="submit" class="btn">
+        </form>
+      </div>
+    </div>
 
   </body>
 
