added a menu item

--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -22,6 +22,7 @@
             <li><a href="{% url 'updates' %}">Updates</a></li>
             <li><a href="{% url 'traffic' %}">Traffic</a></li>
             <li><a href="{% url 'dangerzones' %}">Danger Zones</a></li>
+            <li><a href="{% url 'addevent' %}">Report an event</a></li>
           </ul>
         </div>
       </div>
