--- a/disastercenter/disaster_center/templates/controlcenter.html
+++ b/disastercenter/disaster_center/templates/controlcenter.html
@@ -23,6 +23,7 @@
             <li><a href="{% url 'updates' %}">Updates</a></li>
             <li><a href="{% url 'traffic' %}">Traffic</a></li>
             <li><a href="{% url 'dangerzones' %}">Danger Zones</a></li>
+            <li><a href="{% url 'addevent' %}">Report an event</a></li>
           </ul>
         </div>
       </div>
@@ -42,7 +43,7 @@
       </div>
     </div>
 
-    
+
 
 
   </body>
