--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -20,6 +20,7 @@
             <li><a href="{% url 'floods' %}">Floods</a></li>
             <li><a href="{% url 'storms' %}">Storms</a></li>
             <li><a href="{% url 'updates' %}">Updates</a></li>
+            <li><a href="{% url 'controlcenter' %}">Control Center</a></li>
             <li><a href="{% url 'traffic' %}">Traffic</a></li>
             <li><a href="{% url 'dangerzones' %}">Danger Zones</a></li>
             <li><a href="{% url 'addevent' %}">Report an event</a></li>
