--- a/disastercenter/disaster_center/static/css/moduleBase.css
+++ b/disastercenter/disaster_center/static/css/moduleBase.css
@@ -1,13 +1,30 @@
 #space {
-  padding: 60px;
+  padding: 50px;
 }
 
 #moduleHeader {
   text-size: 72px;
 }
 
+.container {
+  text-align: center;
+}
+
+h1 {
+  margin: 10px;
+  margin-bottom: 40px;
+  text-shadow: 4px 4px 7px rgba(0, 0, 0, 0.25);
+}
+
 .regContainer {
-  display: flex;
+  display: block;
+  text-align: center;
+  box-shadow: 10px 10px 38px -6px rgba(0,0,0,0.25);
+}
 
-
+.form-horizontal {
+  display: inline-block;
+  margin: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
