--- a/disastercenter/disaster_center/templates/add-event.html
+++ b/disastercenter/disaster_center/templates/add-event.html
@@ -7,6 +7,7 @@
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/main.css" %}" rel="stylesheet">
     <link href="{% static "css/moduleBase.css" %}" rel="stylesheet">
+    <link href="{% static "css/moduleLogin.css" %}" rel="stylesheet">
     <title> Disaster Center - Add Event</title>
   </head>
   <body>
@@ -21,6 +22,7 @@
             <li><a href="{% url 'floods' %}">Floods</a></li>
             <li><a href="{% url 'storms' %}">Storms</a></li>
             <li><a href="{% url 'updates' %}">Updates</a></li>
+            <li><a href="{% url 'controlcenter' %}">Control Center</a></li>
             <li><a href="{% url 'traffic' %}">Traffic</a></li>
             <li><a href="{% url 'dangerzones' %}">Danger Zones</a></li>
             <li><a href="{% url 'addevent' %}">Report an event</a></li>
@@ -44,7 +46,7 @@
     </div>
 
     <div class="row">
-      <div class="container">
+      <div class="regContainer col-md-6 col-md-offset-3">
         <form class="form-horizontal">
             <label class="control-label col-md-2"> Report Type: </label>
             <div class="form-group col-md-10">
