--- a/disastercenter/disaster_center/templates/new-user.html
+++ b/disastercenter/disaster_center/templates/new-user.html
@@ -7,6 +7,7 @@
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/main.css" %}" rel="stylesheet">
     <link href="{% static "css/moduleBase.css" %}" rel="stylesheet">
+    <link href="{% static "css/moduleLogin.css" %}" rel="stylesheet">
     <title> Disaster Center - Sign Up</title>
   </head>
   <body>
@@ -37,14 +38,14 @@
 
     <div class="row">
       <div class="container">
-        <div id="moduleHeader"class="col-md-12">
+        <div id="moduleHeader" class="col-md-12">
           <h1>Sign Up</h1>
         </div>
       </div>
     </div>
 
     <!-- email, password, first name, last name -->
-    <div class="regContainer">
+    <div class="regContainer col-md-6 col-md-offset-3">
       <center>
         <form class="form-horizontal">
             <label class="control-label col-md-2"> Email: </label>
