--- a/disastercenter/disaster_center/static/css/main.css
+++ b/disastercenter/disaster_center/static/css/main.css
@@ -8,6 +8,14 @@ a {
   color: inherit;
 }
 
+li > a {
+  color: CFCFCF;
+}
+
+.container {
+  padding-top: 20px;
+}
+
 #maintext {
   height: 100%;
   text-align: center;
