--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <!-- navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navigation navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
         </div>
@@ -38,8 +38,8 @@
     <!-- main text -->
     <div id="maintext" class="row">
       <div class="col-md-12">
-        <h1 style="font-size: 70px; font-weight: bold;"> Disaster Center </h1>
-        <p style="font-size: 36px; font-weight: lighter; font-style: italic;"> We're here to help. </p>
+        <h1 style="font-size: 70px; font-weight: bold; text-shadow: 4px 4px 7px rgba(0, 0, 0, 0.25);"> Disaster Center </h1>
+        <p style="font-size: 36px; font-weight: lighter; font-style: italic; text-shadow: 4px 4px 7px rgba(0, 0, 0, 0.25);"> We're here to help. </p>
       <div>
     </div>
 
