--- a/disastercenter/disaster_center/templates/login.html
+++ b/disastercenter/disaster_center/templates/login.html
@@ -58,9 +58,9 @@
             <div class="form-group col-md-10">
               <input type="password" class="form-control" name="password">
             </div>
-
             <input type="submit" class="btn">
         </form>
+        <a class="registerhere" href="{% url 'newuser' %}"> Don't have an account yet? Register here. </a>
       </center>
     </div>
 
