--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -46,7 +46,7 @@
     <!-- button -->
     <div class="row">
       <div class="col-md-12">
-        <a id="enterSite" href="{% url 'newuser' %}" class="btn btn-primary" style="padding: 20px;"> Log In / Register </a>
+        <a id="enterSite" href="{% url 'login' %}" class="btn btn-primary" style="padding: 20px;"> Enter Site </a>
       <div>
     </div>
 
