--- a/disastercenter/disaster_center/templates/new-user.html
+++ b/disastercenter/disaster_center/templates/new-user.html
@@ -8,6 +8,7 @@
     <link href="{% static "css/main.css" %}" rel="stylesheet">
     <link href="{% static "css/moduleBase.css" %}" rel="stylesheet">
     <link href="{% static "css/moduleLogin.css" %}" rel="stylesheet">
+    <link href="{% static "css/moduleNewUser.css" %}" rel="stylesheet">
     <title> Disaster Center - Sign Up</title>
   </head>
   <body>
