--- a/disastercenter/disaster_center/templates/new-user.html
+++ b/disastercenter/disaster_center/templates/new-user.html
@@ -48,7 +48,8 @@
     <!-- email, password, first name, last name -->
     <div class="regContainer col-md-6 col-md-offset-3">
       <center>
-        <form class="form-horizontal">
+        <form class="form-horizontal" method = "POST" action = "/login/">
+          {% csrf_token %}
             <label class="control-label col-md-2"> Email: </label>
             <div class="form-group col-md-10">
               <input type="text" class="form-control" name="email">
