--- a/disastercenter/disaster_center/templates/login.html
+++ b/disastercenter/disaster_center/templates/login.html
@@ -48,7 +48,7 @@
     <!-- email, password-->
     <div class="regContainer col-md-6 col-md-offset-3">
       <center>
-        <form class="form-horizontal" method = "POST" action = "/controlcenter/">
+        <form class="form-horizontal" method = "POST" action = "/controlcenter">
           {% csrf_token %}
             <label class="control-label col-md-2"> Email: </label>
             <div class="form-group col-md-10">
@@ -60,7 +60,7 @@
               <input type="password" class="form-control" name="password">
             </div>
             <input type="submit" class="btn">
-        </form method = "POST" action = "/newuser/">
+        </form method = "POST" action = "/newuser">
         <a class="registerhere" href="{% url 'newuser' %}"> Don't have an account yet? Register here. </a>
       </center>
     </div>
