--- a/disastercenter/disaster_center/templates/index.html
+++ b/disastercenter/disaster_center/templates/index.html
@@ -10,25 +10,27 @@
   </head>
   <body>
 
-    <!-- navbar -->
+    <!-- navbar
     <nav class="navigation navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
         </div>
         <div id="navbar" class="navbar">
           <ul class="nav navbar-nav">
-            <!--
+
             <li><a href="{% url 'floods' %}">Floods</a></li>
             <li><a href="{% url 'storms' %}">Storms</a></li>
             <li><a href="{% url 'controlcenter' %}">Control Center</a></li>
             <li><a href="{% url 'traffic' %}">Traffic</a></li>
             <li><a href="{% url 'dangerzones' %}">Danger Zones</a></li>
             <li><a href="{% url 'addevent' %}">Report an event</a></li>
-          -->
+          
           </ul>
         </div>
       </div>
     </nav>
+  -->
+
 
     <!--space-->
     <div id="space" class="row">
