--- a/disastercenter/disaster_center/templates/login.html
+++ b/disastercenter/disaster_center/templates/login.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <!-- navbar -->
+    <!-- navbar
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -29,7 +29,7 @@
         </div>
       </div>
     </nav>
-
+  -->
     <!--space-->
     <div id="space" class="row">
       <div class="col-md-12">
