--- a/disastercenter/disaster_center/templates/new-user.html
+++ b/disastercenter/disaster_center/templates/new-user.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <!-- navbar -->
+    <!-- navbar
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -29,6 +29,7 @@
         </div>
       </div>
     </nav>
+  -->
 
     <!--space-->
     <div id="space" class="row">
@@ -47,7 +48,7 @@
     <!-- email, password, first name, last name -->
     <div class="regContainer col-md-6 col-md-offset-3">
       <center>
-        <form class="form-horizontal" method = "POST" action = "/login/">
+        <form class="form-horizontal" method = "POST" action = "/login">
           {% csrf_token %}
             <label class="control-label col-md-2"> Email: </label>
             <div class="form-group col-md-10">
