--- a/disastercenter/disaster_center/static/css/main.css
+++ b/disastercenter/disaster_center/static/css/main.css
@@ -12,6 +12,7 @@ li > a {
   color: CFCFCF;
 }
 
+
 .container {
   padding-top: 20px;
 }
@@ -30,6 +31,11 @@ li > a {
   background-color: 3498DB;
   font-size: 20px;
   box-shadow: 10px 10px 38px -6px rgba(0,0,0,0.24);
+}
+
+#map {
+  width: 100%;
+  height: 60%;
 }
 
 .navbar {
