--- a/disastercenter/disaster_center/templates/traffic.html
+++ b/disastercenter/disaster_center/templates/traffic.html
@@ -44,8 +44,10 @@
     </div>
 
     <div class="row">
-      <div class="col-md-6 col-md-offset-6">
-        <div id="map"></div>
+      <div class="container">
+        <div class="col-md-6 col-md-offset-3">
+          <div id="map"></div>
+        </div>
       </div>
     </div>
 
@@ -57,13 +59,13 @@
       function initMap() {
         // code provided by google api
         // Gets latitude and longitude
-        var myLatLng = {lat: -25.363, lng: 131.044};
+        var myLatLng = {lat: 14.5858, lng: 121.0571};
 
         // Create a map object and specify the DOM element for display.
         var map = new google.maps.Map(document.getElementById('map'), {
           center: myLatLng,
           scrollwheel: false,
-          zoom: 3
+          zoom: 8
         });
 
         // Create a marker and set its position.
