--- a/disastercenter/disaster_center/templates/controlcenter.html
+++ b/disastercenter/disaster_center/templates/controlcenter.html
@@ -51,7 +51,18 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="container">
+        <div class="col-md-6 col-md-offset-3">
+             <a class="twitter-timeline"  href="https://twitter.com/search?q=%40dost_pagasa" data-widget-id="769755786440429568">Tweets about @dost_pagasa</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+      </div>
+    </div>
 
+    <div id="tweet">
+         
+          </div>
 
 
   </body>
@@ -83,6 +94,8 @@
   <script  async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7NHG-6cuFR7a2sVC94UYkf__0s6zpXbs&callback=initMap">
   </script>
+
+
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
