--- a/disastercenter/disaster_center/templates/controlcenter.html
+++ b/disastercenter/disaster_center/templates/controlcenter.html
@@ -59,10 +59,13 @@
         </div>
       </div>
     </div>
+      <div class="row">
+      <div class="container">
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FPAGASA.DOST.GOV.PH%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=227429069763" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        </div>
+      </div>
+    </div>
 
-    <div id="tweet">
-         
-          </div>
 
 
   </body>
